--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18592,7 +18592,7 @@ pages = {352--362}
 }
 
 @article{schuringa2019inpatient,
-  title={Inpatient violence in forensic psychiatry: Does change in dynamic risk indicators of the IFTE help predict short term inpatient violence?},
+  title={Inpatient violence in forensic psychiatry: Does change in dynamic risk indicators of the {IFTE} help predict short term inpatient violence?},
   author={Schuringa, Erwin and Spreen, Marinus and Bogaerts, Stefan},
   journal={International journal of law and psychiatry},
   volume={66},
@@ -18609,4 +18609,11 @@ pages = {352--362}
   number={1},
   pages={1--3},
   year={1950}
+}
+
+@inproceedings{plonsky2017psychological,
+  title={Psychological forest: Predicting human behavior},
+  author={Plonsky, Ori and Erev, Ido and Hazan, Tamir and Tennenholtz, Moshe},
+  booktitle={Thirty-first AAAI conference on artificial intelligence},
+  year={2017}
 }
