--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18527,12 +18527,23 @@ pages = {352--362}
 	url = {https://www.jstatsoft.org/v45/i03/},
 }
 
-@article{spreen2013handleiding,
-	title={Handleiding {HKT-R}},
-	author={Spreen, M and Brand, E and Ter Horst, P and Bogaerts, S},
-	journal={Historische Klinische Toekomst--Revisie},
-	year={2013}
+%@article{spreen2013handleiding,
+%	title={Handleiding {HKT-R}},
+%	author={Spreen, M and Brand, E and Ter Horst, P and Bogaerts, S},
+%	journal={Historische Klinische Toekomst--Revisie},
+%	year={2013}
+%}
+
+@book{spreen2013handleiding,
+    title = {Handleiding en Methodologische Verantwoording HKT-R, Historisch, Klinische en Toekomstige--Revisie},
+    author = {Marinus Spreen and Eddy Brand and {Ter Horst}, Paul and Stefan Bogaerts},
+    year = {2014},
+    month = {nov},
+    day = {23},
+    language = "Dutch",
+    publisher = "Dr. van Mesdag kliniek",
 }
+
 
 @article{vess2001development,
 	title={Development and implementation of a functional skills measure for forensic psychiatric inpatients},
@@ -18616,4 +18627,30 @@ pages = {352--362}
   author={Plonsky, Ori and Erev, Ido and Hazan, Tamir and Tennenholtz, Moshe},
   booktitle={Thirty-first AAAI conference on artificial intelligence},
   year={2017}
+}
+
+@Article{miceRpackage,
+    title = {{mice}: Multivariate Imputation by Chained Equations in R},
+    author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {45},
+    number = {3},
+    pages = {1-67},
+    doi = {10.18637/jss.v045.i03},
+}
+
+@article{segal2010diagnostic,
+  title={Diagnostic and statistical manual of mental disorders (DSM-IV-TR)},
+  author={Segal, Daniel L},
+  journal={The Corsini Encyclopedia of Psychology},
+  pages={1--3},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{americandiagnostic,
+  title={Diagnostic and statistical manual of mental disorders (2000)},
+  author={American Psychiatry Association and others},
+  journal={DSM-IV. 4th edition. Washington DC: American Psychiatric Association}
 }
